--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -26,6 +26,8 @@
     "firebase": "^5.8.0",
     "firebase-admin": "^6.5.0",
     "font-awesome": "^4.7.0",
+    "ng-tags-input": "^3.2.0",
+    "ngx-chips": "^2.0.0-beta.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -38,7 +40,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "angular-ide": "^0.9.55",
+    "angular-ide": "^0.9.56",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
