--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -40,8 +40,10 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "angular-ide": "^0.9.56",
+    "angular-ide": "^0.9.59",
     "codelyzer": "~4.5.0",
+    "eslint": "^5.13.0",
+    "eslint-plugin-promise": "^4.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
