--- a/Good-Eatin/firebase.json
+++ b/Good-Eatin/firebase.json
@@ -12,7 +12,7 @@
     ]
   },
   "hosting": {
-    "public": "public",
+    "public": "dist/Good-Eatin",
     "ignore": [
       "firebase.json",
       "**/.*",
