--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -26,6 +26,7 @@
     "firebase": "^5.8.0",
     "firebase-admin": "^6.5.0",
     "font-awesome": "^4.7.0",
+    "ionic": "^4.10.2",
     "ng-tags-input": "^3.2.0",
     "ngx-chips": "^2.0.0-beta.0",
     "rxjs": "~6.3.3",
@@ -37,6 +38,7 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@ionic/app-scripts": "^3.2.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
