--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -27,6 +27,7 @@
     "firebase-admin": "^6.5.0",
     "font-awesome": "^4.7.0",
     "ionic": "^4.10.2",
+    "ng-simple-slideshow": "^1.2.8",
     "ng-tags-input": "^3.2.0",
     "ngx-chips": "^2.0.0-beta.0",
     "rxjs": "~6.3.3",
