--- a/Good-Eatin/firebase.json
+++ b/Good-Eatin/firebase.json
@@ -17,7 +17,14 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "headers": [ {
+        "source" : "**",
+        "headers" : [ {
+          "key" : "Access-Control-Allow-Origin",
+          "value" : "*"
+        } ]
+    } ]
   },
   "storage": {
     "rules": "storage.rules"
