--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
     "firebase-admin": "^6.5.0",
+    "firebaseui": "^3.5.2",
     "font-awesome": "^4.7.0",
     "ionic": "^4.10.2",
     "ng-simple-slideshow": "^1.2.8",
@@ -37,7 +38,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.5",
     "@angular/language-service": "~7.2.0",
     "@ionic/app-scripts": "^3.2.2",
     "@types/jasmine": "~2.8.8",
