--- a/Good-Eatin/firebase.json
+++ b/Good-Eatin/firebase.json
@@ -1,7 +1,5 @@
 {
-  "database": {
-    "rules": "database.rules.json"
-  },
+  
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
@@ -18,6 +16,14 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "rewrites": [{
+      "source": "/public/**",
+      "destination": "/public.html"
+    },
+    {
+      "source": "**",
+      "destination": "/index.html"
+    }],
     "headers": [ {
         "source" : "**",
         "headers" : [ {
