--- a/Good-Eatin/functions/package.json
+++ b/Good-Eatin/functions/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "cors": "^2.8.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
