--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.2.0",
     "@ionic/app-scripts": "^3.2.2",
     "@types/jasmine": "~2.8.8",
@@ -48,9 +48,10 @@
     "codelyzer": "~4.5.0",
     "eslint": "^5.13.0",
     "eslint-plugin-promise": "^4.0.1",
+    "https-proxy-agent": "^2.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
