--- a/Good-Eatin/angular.json
+++ b/Good-Eatin/angular.json
@@ -19,7 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/goodeatinicon.png",
               "src/assets"
             ],
             "styles": [
@@ -84,7 +84,7 @@
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
+              "src/goodeatin.png",
               "src/assets"
             ]
           }
