--- a/Good-Eatin/firebase.json
+++ b/Good-Eatin/firebase.json
@@ -30,7 +30,9 @@
         "headers" : [ {
           "key" : "Access-Control-Allow-Origin",
           "value" : "*"
-        } ]
+        },
+        { "key" : "Access-Control-Allow-Headers",
+          "value": "*"} ]
     } ]
   },
   "storage": {
