--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -30,8 +30,10 @@
     "ionic": "^4.10.2",
     "ng-simple-slideshow": "^1.2.8",
     "ng-tags-input": "^3.2.0",
+    "ng-toast": "^2.0.0",
     "ngx-chips": "^2.0.0-beta.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
