--- a/Good-Eatin/angular.json
+++ b/Good-Eatin/angular.json
@@ -23,8 +23,11 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              },
               "src/styles.css",
-              "src/../node_modules/font-awesome/css/font-awesome.css" 
+              "src/../node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
@@ -80,6 +83,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              },
               "src/styles.css"
             ],
             "scripts": [],
