--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.8",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@progress/kendo-angular-l10n": "^1.1.0",
+    "@progress/kendo-angular-notification": "^1.2.0",
+    "@progress/kendo-theme-default": "^3.3.1",
     "angular2-fontawesome": "^5.2.1",
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
@@ -33,7 +36,7 @@
     "ng-toast": "^2.0.0",
     "ngx-chips": "^2.0.0-beta.0",
     "rxjs": "~6.3.3",
-    "rxjs-compat": "^6.4.0",
+    "rxjs-compat": "^6.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
