--- a/Good-Eatin/package.json
+++ b/Good-Eatin/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "~7.2.0",
     "@progress/kendo-angular-l10n": "^1.1.0",
     "@progress/kendo-angular-notification": "^1.2.0",
-    "@progress/kendo-theme-default": "^3.3.1",
+    "@progress/kendo-theme-default": "latest",
     "angular2-fontawesome": "^5.2.1",
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
