--- a/Good-Eatin/angular.json
+++ b/Good-Eatin/angular.json
@@ -26,6 +26,7 @@
               {
                 "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
               },
+              "dist/pretty-checkbox.min.css",
               "src/styles.css",
               "src/../node_modules/font-awesome/css/font-awesome.css"
             ],
